--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 		<button class="saveButton" onclick="save()">Save Your Game</button>
 		<button class="loadButton" onclick="load()">Load Your Game</button>
+		<button class="toggleButton" onclick="musicToggle()">Toggle Music</button>
 
 	</body>
 
