--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<button class="planetButton" onclick="addPlanet()">Make Planets</button>
 		<button class="planetUpgradeButton" onclick="upgradePlanet()">Upgrade Planets</button> 
 		<button class="solarSystemButton" onclick="addSolarSystem()">Make Solar Systems</button>
-		<button class="solarSystemUpgradeButton" onclick="upgradeolarSystem()">Upgrade Solar Systems</button> 
+		<button class="solarSystemUpgradeButton" onclick="upgradeSolarSystem()">Upgrade Solar Systems</button> 
 		<button class="galaxyButton" onclick="addGalaxy()">Make Galaxies</button>
 		<button class="galaxyUpgradeButton" onclick="upgradeGalaxy()">Upgrade Galaxies</button> 
 		<button class="universeButton" onclick="addUniverse()">Make Universes</button>
@@ -55,6 +55,9 @@
 
 		<button class="saveButton" onclick="save()">Save Your Game</button>
 		<button class="loadButton" onclick="load()">Load Your Game</button>
+
+		<button class="playButton" onclick="playMusic()">Play!</button> 
+		<button class="pauseButton" onclick="pauseMusic()">Pause!</button> 
 
 	</body>
 
