--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 		<button class="playButton" onclick="playMusic()">Play!</button> 
 		<button class="pauseButton" onclick="pauseMusic()">Pause!</button> 
+		<button class="resetButton" onclick="reset()">HARD RESET</button> 
 
 	</body>
 
