--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 		<button class="pauseButton" onclick="pauseMusic()">Pause!</button> 
 		<button class="resetButton" onclick="reset()">HARD RESET</button> 
 
+		<button class="prestigeButton" onclick="prestige()">Prestige</button>
+
 	</body>
 
 
