--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-
+	<script src='libraries/break_infinity.js'></script>
 	<head>
 		<meta charset="UTF-8"/>
 		<link href="styles/main.css" rel="stylesheet"/>
