--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		<button class="saveButton" onclick="save()">Save Your Game</button>
 		<button class="loadButton" onclick="load()">Load Your Game</button>
 
-		<button class="playButton" onclick="playMusic()">Play!</button> 
-		<button class="pauseButton" onclick="pauseMusic()">Pause!</button> 
+		<button class="playButton" onclick="playMusic()">Play Music</button> 
+		<button class="pauseButton" onclick="pauseMusic()">Pause Music</button> 
 		<button class="resetButton" onclick="reset()">HARD RESET</button> 
 
 		<button class="prestigeButton" onclick="prestige()">Prestige</button>
